--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -35,9 +35,10 @@
             <i class="fa-solid fa-book"></i> Contabilidad
           </a>
           <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="8"><i class="fa-solid fa-arrow-right-to-bracket"></i> Entradas</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fa-solid fa-arrow-right-from-bracket"></i></i> Salidas</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fas fa-paste"></i> Informes</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="10"><i class="fa-solid fa-arrow-right-to-bracket"></i> Turnos</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="11"><i class="fa-solid fa-arrow-right-to-bracket"></i> Entradas</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="12"><i class="fa-solid fa-arrow-right-from-bracket"></i></i> Salidas</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="13"><i class="fas fa-paste"></i> Informes</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
