--- a/templates/inicio/index.html.twig
+++ b/templates/inicio/index.html.twig
@@ -6,6 +6,7 @@
     {% include 'menu.html.twig' %}
     <div class="container-fluid" style="background: #fff; width: 100%;  min-height: 100vh;" data-turbo="true" {{ stimulus_controller('sistema--app',
         {
+            'rutaRegistrarVenta' : path('app_registrarVenta', {'detalle' : 'var1', 'producto' : 'var2', 'cantidad' : 'var3', 'valor' : 'var4',}),
             'rutaCambiaEstadoServicio' : path('app_cambiaEstadoServicio', {'id' : 'var1', 'estado' : 'var2' }),
             'rutaUpdateCantProducto' : path('app_updateCantProducto', {'id' : 'var1', 'accion' : 'var2', 'cantidad' : 'var3' }),
             'rutaObtenerDatosClienteReserva' : path('app_obtenerDatosClienteReserva', {'id' : 'var1' }),
@@ -18,6 +19,7 @@
             'rutaEliminarHab' : path('app_eliminarHabitacion', {'id' : 'var1' }),
             'rutaObtenerServicio': path('app_obtenerServicio', {'id' : 'var1'}),
             'rutaObtenerProducto': path('app_obtenerProducto', {'id' : 'var1'}),
+            'rutaObtenerCheckin' : path('app_obtenerCheckin', {'id' : 'var1'}),
             'rutaEliminarPiso' : path('app_eliminarPiso', {'id' : 'var1' }),
             'rutaCrearCheckin' : path('app_crearCheckin', {'id' : 'var1' }),
             'rutaListaServ' : path('app_listaServ', {'filtro' : 'var1' }),
@@ -33,6 +35,7 @@
             'rutaNuevaCompania' : path('app_nuevaCompania'),
             'rutaHabitaciones' : path('app_habitaciones'),
             'rutaNuevaReserva' : path('app_nuevaReserva'),
+            'rutaCerrarTurno' : path('app_cerrarTurno'),
             'rutaAbrirTurno' : path('app_abrirTurno'),
             'rutaInventario' : path('app_inventario'),
             'rutaCompanias' : path('app_companias'),
@@ -43,6 +46,7 @@
             'rutaReservas' : path('app_reservas'),
             'rutaClientes' : path('app_clientes'),
             'rutaEntradas' : path('app_entradas'),
+            'rutaCheckin' : path('app_checkin'),
             'rutaInicio' : path('app_inicio'),
             'rutaDocs' : path('app_tipodoc'),
             'rutaPisos' : path('app_pisos'),
@@ -111,6 +115,12 @@
             <div class="row w-100 gx-4" style="padding-top: 75px;">
                 <turbo-frame id="frame-entradas" data-sistema--app-target="frameEntradas" src="{{ path('app_entradas') }}" >
                     <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando entradas</p>
+                </turbo-frame>
+            </div>
+        {% elseif pantalla == 10 %}
+            <div class="row w-100 gx-4" style="padding-top: 75px;">
+                <turbo-frame id="frame-turnos" data-sistema--app-target="frameTurnos" src="{{ path('app_turnos') }}" >
+                    <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando turnos</p>
                 </turbo-frame>
             </div>
         {% endif %}
