--- a/templates/reservas/index.html.twig
+++ b/templates/reservas/index.html.twig
@@ -39,9 +39,9 @@
                                             </td>
                                             <td style="text-align:center; width: 20px;">
                                                 {% if checkin.estado == 0 %}
-                                                    <i class="fas fa-check-circle text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckin"></i>
+                                                    <i class="fas fa-check-circle text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckin" data-id = {{ checkin.id }} ></i>
                                                 {% else %}
-                                                    <i class="far fa-window-maximize text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalNuevoCliente" data-accion = '2'></i>
+                                                    <i class="far fa-window-maximize text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckOut" data-id = {{ checkin.id }} data-accion = '2'></i>
                                                 {% endif %}
                                             </td>
                                             <td style="text-align:center; width: 20px;">
@@ -79,18 +79,22 @@
                 </div>
                 <div class="modal-body" data-sistema--app-target="modalBodyCheckin">
                     <div id="checkin-1">
-                        <form data-sistema--app-target="formCheckin-1">
+                        <form data-sistema--app-target="formCheckin">
+                            <input type="hidden" name="idCheckin" id="idCheckin"  value="0">
+                            <input type="hidden" name="idHab" id="idHab"  value="0">
+                            <input type="hidden" name="productos" id="productos"  value="0">
+                            <input type="hidden" name="servicios" id="servicios"  value="0">
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <label for="${selectId}" class="form-label mb-0" style="font-weight: bold;">Cliente <i class="fas fa-exclamation-circle text-info" title="Crear cliente" style="" data-action="click->sistema--app#abrirModalNuevoCliente" data-accion="1"></i></label>
                                         <div class="d-flex justify-content-end align-items-center">
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="tipoClienteCheckin-1" id="motoristaCheckin-1" value="motorista" checked>
+                                                <input class="form-check-input" type="radio" name="tipoClienteCheckin" id="motoristaCheckin-1" value="motorista" checked>
                                                 <label class="form-check-label" for="motoristaCheckin-1" style="font-weight: normal;">Motorista</label>
                                             </div>
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="tipoClienteCheckin-1" id="turistaCheckin-1" value="turista">
+                                                <input class="form-check-input" type="radio" name="tipoClienteCheckin" id="turistaCheckin-1" value="turista">
                                                 <label class="form-check-label" for="turistaCheckin-1" style="font-weight: normal;">Turista</label>
                                             </div>
                                         </div>
@@ -109,19 +113,19 @@
                                 </div>                                    
                                 <div class="col-md-2">
                                     <label for="fechaLlegada" class="form-label" style="font-weight: bold;">Fecha llegada</label>
-                                    <input type="date" id="fechaLlegada-1" name="fechaLlegClienteRev" class="form-control" value="" min="">
+                                    <input type="date" id="fechaLlegada" name="fechaLlegClienteRev" class="form-control" value="" min="">
                                 </div>
                                 <div class="col-md-2">
                                     <label for="horaLlegada" class="form-label" style="font-weight: bold;">Hora llegada</label>
-                                    <input type="time" id="horallegada-1" name="horaLlegClienteRev" class="form-control" value="" min="">
+                                    <input type="time" id="horallegada" name="horaLlegClienteRev" class="form-control" value="" min="">
                                 </div>
                                 <div class="col-md-2">
                                     <label for="fechaSalida" class="form-label" style="font-weight: bold;">Fecha salida</label>
-                                    <input type="date" id="fechaSalida-1" name="fechaSalidaClienteRev" class="form-control" value="" min="">
+                                    <input type="date" id="fechaSalida" name="fechaSalidaClienteRev" class="form-control" value="" min="">
                                 </div>
                                 <div class="col-md-2">
                                     <label for="horaSalida" class="form-label" style="font-weight: bold;">Hora salida</label>
-                                    <input type="time" id="horaSalida-1" name="horaSalidaClienteRev" class="form-control" value="" min="">
+                                    <input type="time" id="horaSalida" name="horaSalidaClienteRev" class="form-control" value="" min="">
                                 </div>                                
                             </div>
                             <div class="row mt-3">
@@ -229,7 +233,7 @@
                     </div>
                 </div>  
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-sistema--app-target="btnGuardarReserva" data-action="sistema--app#guardarReserva" disabled>Guardar</button>
+                    <button type="button" class="btn btn-primary" data-sistema--app-target="btnGuardarReserva" data-action="sistema--app#hacerCheckin">Guardar</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
@@ -274,7 +278,7 @@
                     <div class="row mb-3">
                         <div class="col-md-12">
                             <label for="selectHabitacionServ" class="form-label" style="font-weight: bold;">Habitación</label> 
-                            <select class="form-select" id="selectHabitacionServ" name="selectHabitacionServ" data-sistema--app-target="selectHabitacionServ"  data-action="change->sistema--app#validaBtnGuardarServicioCheckin">
+                            <select class="form-select" id="selectHabitacionServ" name="selectHabitacionServ" data-sistema--app-target="selectHabitacionServ"  data-action="change->sistema--app#cargarHab change->sistema--app#validaBtnGuardarServicioCheckin ">
                                 <option value="">Seleccione habitación</option>                                
                             </select>
                         </div>
@@ -375,6 +379,156 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-sistema--app-target="btnGuardarProductoCheckin" data-action="sistema--app#guardarProductosCheckin" disabled>Guardar</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal para hacer check-out -->
+    <div class="modal fade" id="modalCheckout" data-turbo="false" data-sistema--app-target="modalCheckout" tabindex="-1" aria-labelledby="modalCheckoutLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <input type="hidden" name="idCheckout" id="idCheckout"  value="0">
+                <div class="modal-header">
+                    <h5 class="modal-title">Check-out</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="checkin-1">
+                        <form data-sistema--app-target="formCheckin">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <label class="form-label mb-0" style="font-weight: bold;">Cliente</i></label>
+                                        <div class="d-flex justify-content-end align-items-center">                                            
+                                            <label class="form-check-label" for="tipoClienteOut" id="tipoClienteOut" style="font-weight: normal;"></label>                                            
+                                        </div>
+                                    </div>
+                                    <div class="input-group mt-1">
+                                        <input class="form-control" id="clienteCheckout" type="text" value="" disabled >
+                                    </div>
+                                </div>                                    
+                                <div class="col-md-2">
+                                    <label for="fechaLlegada" class="form-label" style="font-weight: bold;">Fecha llegada</label>
+                                    <input type="date" class="form-control" id="fechaLlegadaOut" value="" disabled>
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="horaLlegada" class="form-label" style="font-weight: bold;">Hora llegada</label>
+                                    <input type="time" class="form-control" id="horaLlegadaOut" value="" disabled>
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="fechaSalida" class="form-label" style="font-weight: bold;">Fecha salida</label>
+                                    <input type="date" id="fechaSalidaOut" name="fechaSalidaClienteRev" class="form-control" value="" min="">
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="horaSalida" class="form-label" style="font-weight: bold;">Hora salida</label>
+                                    <input type="time" id="horaSalidaOut" name="horaSalidaClienteRev" class="form-control" value="" min="">
+                                </div>                                
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-12">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-sm align-middle mb-0">
+                                            <thead class="table-light">
+                                                <tr>
+                                                    <th class="text-nowrap">Servicio</th>
+                                                    <th class="text-nowrap">Habitación</th>
+                                                    <th class="text-nowrap">Forma de pago</th>
+                                                    <th class="text-nowrap">Comprobante</th>
+                                                    <th class="text-nowrap">Valor</th>
+                                                    <th class="text-nowrap">Valor pagado</th>
+                                                    <th class="text-nowrap">Saldo</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="serviciosCheckout">
+                                                                                                
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-12">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-sm align-middle mb-0">
+                                            <thead class="table-light">
+                                                <tr>
+                                                    <th class="text-nowrap">Producto</th>
+                                                    <th class="text-nowrap">Forma de pago</th>
+                                                    <th class="text-nowrap">Cantidad</th>
+                                                    <th class="text-nowrap">Valor und</th>
+                                                    <th class="text-nowrap">Total</th>
+                                                    <th class="text-nowrap">Valor pagado</th>
+                                                    <th class="text-nowrap">Saldo</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="productosCheckout">                                               
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-md-4 d-flex align-items-center">
+                                    <div class="w-100">
+                                        <label class="form-label mb-1" style="font-weight: bold;">Elementos entregados</label><br>
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="checkTodosOut" data-action="sistema--app#marcarElementos" data-index="1"  value="">
+                                                    <label class="form-check-label" for="checkToalla">Todos</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input check-1" type="checkbox" id="checkToallaOut" name="Toalla"  data-action="sistema--app#marcarElemento" data-index="1">
+                                                    <label class="form-check-label" for="checkToalla">Toalla</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input check-1" type="checkbox" id="checkControlOut" name="control" data-action="sistema--app#marcarElemento" data-index="1">
+                                                    <label class="form-check-label" for="checkControl">Control</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input check-1" type="checkbox" id="checkAireOut" name="aire" value="" data-action="sistema--app#marcarElemento" data-index="1">
+                                                    <label class="form-check-label" for="checkAire">Aire</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input check-1" type="checkbox" id="checkCobijaOut" name="cobija" value="" data-action="sistema--app#marcarElemento" data-index="1">
+                                                    <label class="form-check-label" for="checkCobija">Cobija</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input check-1" type="checkbox" id="checkLlavesOut" name="llaves" value="" data-action="sistema--app#marcarElemento" data-index="1" checked>
+                                                    <label class="form-check-label" for="checkLlaves">Llaves</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="observacionesCheckin" class="form-label" style="font-weight: bold;">Observaciones</label> 
+                                    <textarea id="observacionesCheckOut" name="observacionesCheckOut" class="form-control" rows="2" readonly></textarea>
+                                </div>
+                                <div class="col-md-2">
+                                    <label class="form-label" style="font-weight: bold;">Saldo a pagar</label> 
+                                    </br><span id="totalPagar-1" class="text-success" style=" font-size: 26pt; font-weight: bold;">$ 0</span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>  
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-sistema--app-target="btnGuardarReserva" data-action="sistema--app#hacerCheckin">Guardar</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
