--- a/templates/inicio/index.html.twig
+++ b/templates/inicio/index.html.twig
@@ -16,14 +16,19 @@
             'rutaEliminarClientes' : path('app_eliminarClientes', {'id' : 'var1' }),
             'rutaEliminarTipodoc' : path('app_eliminarTipodoc', {'id' : 'var1' }),
             'rutaEliminarReserva' : path('app_eliminarReserva', {'id' : 'var1' }),
+            'rutaEliminarCheckin' : path('app_eliminarCheckin', {'id' : 'var1'}),
             'rutaEliminarHab' : path('app_eliminarHabitacion', {'id' : 'var1' }),
             'rutaObtenerServicio': path('app_obtenerServicio', {'id' : 'var1'}),
             'rutaObtenerProducto': path('app_obtenerProducto', {'id' : 'var1'}),
             'rutaObtenerCheckin' : path('app_obtenerCheckin', {'id' : 'var1'}),
+            'rutaGenerarFactura' : path('app_generarFactura', {'id' : 'var1'}),
+            'rutaAgregarProductoCheckin' : path('app_agregarProductoCheckin'),
+            'rutaAgregarServicioCheckin' : path('app_agregarServicioCheckin'),
             'rutaEliminarPiso' : path('app_eliminarPiso', {'id' : 'var1' }),
             'rutaCrearCheckin' : path('app_crearCheckin', {'id' : 'var1' }),
             'rutaListaServ' : path('app_listaServ', {'filtro' : 'var1' }),
             'rutaCargarProductosPlano' : path('app_cargarProductosPlano'),
+            'rutaCheckout' : path('app_checkout', {'id' : 'var1'}),
             'rutaGuardarTiposServ' : path('app_guardarTiposServ'),
             'rutaGuardarProducto' : path('app_guardarProducto'),
             'rutaNuevaHabitacion' : path('app_nuevaHabitacion'),
@@ -50,6 +55,7 @@
             'rutaInicio' : path('app_inicio'),
             'rutaDocs' : path('app_tipodoc'),
             'rutaPisos' : path('app_pisos'),
+            
             
 
 
