--- a/templates/stock/entradas.html.twig
+++ b/templates/stock/entradas.html.twig
@@ -58,7 +58,7 @@
                 <div class="row mb-3">
                     <div class="col-md-12">
                         <label for="codigo" class="form-label" style="font-weight: bold;">Codigo</label> 
-                        <select class="form-select" id="codigo"  name="codigo" data-sistema--app-target="codigoProducto" data-action="sistema--app#validaBtnGuardarEntrada" >
+                        <select class="form-control selectpicker" data-controller="sistema--selectpicker" data-live-search="true" data-live-search-placeholder="Filtro productos" data-size="5" id="codigo"  name="codigo" data-sistema--app-target="codigoProducto" data-action="sistema--app#validaBtnGuardarEntrada" >
                             <option value="">Seleccione tipo de producto</option>
                             {% for item in productos %}
                                 <option value="{{ item.id }}">{{ item.codigo}} - {{ item.nombre }}</option>
